# SF_SimplePluginTemplate

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EXCEPTIONS  README.md  vcpkg.json
.github/workflows/: build.yml  clang_format.yml  update_submodules.yml
cmake/: AddCXXFiles.cmake  CommonLibSFPlugin.cmake  Plugin.h.in  Version.rc.in
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
include/: PCH.h
src/: PCH.cpp  main.cpp
